src/css/Board.css
:root{
    --header-color: #5D6372;
}

.board {
    flex: 1 1 0;
    min-width: 306px;

    background: #FEFEFF;
    border: 1px solid #F2F2F4;
}

.board-header,
.tasks {
    margin: 12px;
    margin-bottom: 0px;
}

.tasks {
    display: flex;
    flex-direction: column;
    gap: 12px;
}

.board-header-text {
    margin-bottom: 4px;
    color: var(--header-color);
}

.no-task {
    margin-top: 20px;

    line-height: 24px;

    color: #B7BDC9;
}

.create-new-task-button {
    display: flex;
    flex-direction: row;
    align-items: center;

    width: fit-content;
    left: 122px;
    top: 368px;

    border-radius: 8px;
}

.create-new-task-button-icon {
    width: 16px;
    height: 16px;

    flex: none;
    order: 0;
    flex-grow: 0;
    margin-left: 8px;
}

.create-new-task-text {
    position: static;

    line-height: 20px;

    color: #2F3136;

    flex: none;
    order: 1;
    flex-grow: 0;
}

